feat: 利用規約を書き込めるようにする (#45)
* feat: 利用規約を書き込めるようにする

* format

* fix

* miss

* miss
