# UniQUE-API/src/docs/swagger.json
@@ -1566,6 +1566,9 @@
                 "public_client": {
                     "type": "boolean"
                 },
+                "terms_url": {
+                    "type": "string"
+                },
                 "updated_at": {
                     "type": "string"
                 },
@@ -1627,6 +1630,9 @@
                 },
                 "public_client": {
                     "type": "boolean"
+                },
+                "terms_url": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "string"
@@ -1902,6 +1908,9 @@
                 "public_client": {
                     "$ref": "#/definitions/routes.Nullable-bool"
                 },
+                "terms_url": {
+                    "$ref": "#/definitions/routes.Nullable-string"
+                },
                 "website_url": {
                     "$ref": "#/definitions/routes.Nullable-string"
                 }
@@ -2118,6 +2127,9 @@
                 },
                 "public_client": {
                     "$ref": "#/definitions/routes.Nullable-bool"
+                },
+                "terms_url": {
+                    "$ref": "#/definitions/routes.Nullable-string"
                 },
                 "website_url": {
                     "$ref": "#/definitions/routes.Nullable-string"
