# UniQUE-API/src/internal/model/applications.gen.go
@@ -19,6 +19,7 @@ type Application struct {
 	Description      *string        `gorm:"column:description" json:"description"`
 	WebsiteURL       *string        `gorm:"column:website_url" json:"website_url"`
 	PrivacyPolicyURL *string        `gorm:"column:privacy_policy_url" json:"privacy_policy_url"`
+	TermsURL         *string        `gorm:"column:terms_url" json:"terms_url"`
 	ClientSecret     string         `gorm:"column:client_secret" json:"client_secret"`
 	PublicClient     bool           `gorm:"column:public_client;not null;default:false" json:"public_client"`
 	UserID           string         `gorm:"column:user_id;not null" json:"user_id"`
